# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import machinesRouter from "./machines";
 import queueRouter from "./queue";
 import announcementRouter from "./announcement";
 import adminRouter from "./admin";
+import complaintsRouter from "./complaints";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(machinesRouter);
 router.use(queueRouter);
 router.use(announcementRouter);
 router.use(adminRouter);
+router.use(complaintsRouter);
 
 export default router;
