# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./machines";
 export * from "./queue";
 export * from "./announcements";
+export * from "./complaints";
